doc: add readme for general knowledge

--- a/hybrid-3-method.ipynb
+++ b/hybrid-3-method.ipynb
@@ -10,6 +10,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content-Based Filtering:\n",
+    "\n",
+    "- Uses TfidfVectorizer to convert product descriptions into TF-IDF vectors and computes cosine similarity between products.\n",
+    "Recommends products similar to a given product based on these similarity scores.\n",
+    "Collaborative Filtering:\n",
+    "\n",
+    "- Uses SVD from the surprise library to perform matrix factorization on user-item interaction data.\n",
+    "Recommends products based on predicted ratings for items not yet interacted with by the user.\n",
+    "Sequence-Based Model (RNN):\n",
+    "\n",
+    "- Prepares sequential data of user interactions and pads sequences to a fixed length.\n",
+    "Defines and trains an RNN model to predict the next product a user might interact with.\n",
+    "Recommends products based on the predictions of the RNN model.\n",
+    "Hybrid Approach:\n",
+    "\n",
+    "- Combines recommendations from content-based filtering, collaborative filtering, and the RNN model.\n",
+    "Uses a weighted approach (controlled by alpha, beta, and gamma) to merge the scores from all methods.\n",
+    "Provides final recommendations by ranking the combined scores.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
